--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-contextmenu": "^1.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
