--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.2",
+    "@ngrx/store-devtools": "^3.2.4",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ngx-contextmenu": "^1.2.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
