--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,18 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.1",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.3.1",
-    "@angular/compiler": "^4.3.1",
-    "@angular/core": "^4.3.1",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "^4.3.1",
-    "@angular/http": "^4.3.1",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.3.1",
-    "@angular/platform-browser-dynamic": "^4.3.1",
-    "@angular/router": "^4.3.1",
+    "@angular/animations": "5.0.0",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/platform-server": "5.0.0",
+    "@angular/router": "5.0.0",
+    "@ncstate/sat-popover": "^1.0.0-beta.4",
     "@ngrx/effects": "^4.0.1",
     "@ngrx/router-store": "^4.0.0",
     "@ngrx/store": "^4.0.0",
@@ -31,18 +33,18 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ngx-contextmenu": "^1.3.4",
+    "ngx-contextmenu": "^3.0.2",
     "reselect": "^3.0.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "^1.2.4",
-    "@angular/compiler-cli": "^4.3.1",
+    "@angular/compiler-cli": "5.0.0",
     "@types/node": "^8.0.16",
     "codelyzer": "^3.1.2",
     "ts-node": "^3.3.0",
     "tslint": "^5.5.0",
-    "typescript": "^2.4.2"
+    "typescript": "2.4.2"
   }
 }
