--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/core": "5.0.0",
+    "@angular/animations": "^5.2.5",
+    "@angular/cdk": "^5.2.1",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/core": "^5.2.5",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/platform-server": "5.0.0",
-    "@angular/router": "5.0.0",
-    "@ncstate/sat-popover": "^1.0.0-beta.4",
-    "@ngrx/effects": "^4.0.1",
-    "@ngrx/router-store": "^4.0.0",
-    "@ngrx/store": "^4.0.0",
-    "@ngrx/store-devtools": "^4.0.0",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/material": "^5.2.1",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/platform-server": "^5.2.5",
+    "@angular/router": "^5.2.5",
+    "@ncstate/sat-popover": "^1.0.0",
+    "@ngrx/effects": "^5.1.0",
+    "@ngrx/router-store": "^5.0.1",
+    "@ngrx/store": "^5.1.0",
+    "@ngrx/store-devtools": "^5.1.0",
     "angular2-uuid": "^1.1.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
-    "ngx-contextmenu": "^3.0.2",
+    "ngx-contextmenu": "^4.1.2",
     "reselect": "^3.0.1",
-    "rxjs": "5.5.2",
-    "zone.js": "^0.8.14"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.4",
-    "@angular/compiler-cli": "5.0.0",
-    "@types/node": "^8.0.16",
-    "codelyzer": "^3.1.2",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.5.0",
-    "typescript": "2.4.2"
+    "@angular/cli": "^1.6.8",
+    "@angular/compiler-cli": "^5.2.5",
+    "@types/node": "^9.4.6",
+    "codelyzer": "^4.1.0",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.9.1",
+    "typescript": ">=2.4.2 <2.7.0"
   }
 }
