--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/compiler-cli": "^5.2.5",
     "@types/node": "^9.4.6",
     "codelyzer": "^4.1.0",
+    "ngrx-store-freeze": "^0.2.1",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
     "typescript": ">=2.4.2 <2.7.0"
