--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
+    "ngx-clipboard": "^10.0.0",
     "ngx-contextmenu": "^4.1.2",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
