--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
+    "mobile-drag-drop": "^2.3.0-rc.0",
     "ngx-clipboard": "^10.0.0",
     "ngx-contextmenu": "^4.1.2",
+    "ngx-drag-drop": "^1.0.3",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
