--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngx-drag-drop": "^1.0.3",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
