--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build",
+    "build-plugin": "ng build --prod --env=plugin",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
