--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/entity": "^5.1.0",
     "@ngrx/router-store": "^5.0.1",
     "@ngrx/store": "^5.1.0",
+    "angular2-hotkeys": "^2.0.4",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
