--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.5",
-    "@angular/cdk": "6.0.0-beta.2",
+    "@angular/cdk": "6.0.0-beta.4",
     "@angular/common": "^5.2.5",
     "@angular/compiler": "^5.2.5",
     "@angular/core": "^5.2.5",
     "@angular/flex-layout": "^5.0.0-beta.13",
     "@angular/forms": "^5.2.5",
     "@angular/http": "^5.2.5",
-    "@angular/material": "6.0.0-beta.2",
+    "@angular/material": "6.0.0-beta.4",
     "@angular/platform-browser": "^5.2.5",
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/platform-server": "^5.2.5",
@@ -36,9 +36,11 @@
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
     "mobile-drag-drop": "^2.3.0-rc.0",
+    "nbt": "^0.7.0",
     "ngx-clipboard": "^10.0.0",
     "ngx-contextmenu": "^4.1.2",
     "ngx-drag-drop": "^1.0.3",
+    "pako": "^1.0.6",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
