--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@ngrx/entity": "^5.1.0",
     "@ngrx/router-store": "^5.0.1",
     "@ngrx/store": "^5.1.0",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "angular2-hotkeys": "^2.0.4",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
