--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "mobile-drag-drop": "^2.3.0-rc.0",
     "nbt": "^0.7.0",
+    "ngx-auto-unsubscribe": "^2.3.0",
     "ngx-clipboard": "^10.0.0",
     "ngx-contextmenu": "^4.1.2",
     "ngx-drag-drop": "^1.0.3",
