--- a/package.json
+++ b/package.json
@@ -3,58 +3,59 @@
   "version": "3.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --pc proxy.conf.json --env=proxy --open",
+    "start": "ng serve --proxy-config proxy.conf.json --configuration=proxy --open",
     "build": "ng build",
-    "build-plugin": "ng build --prod --env=plugin",
+    "build-plugin": "ng build --prod --configuration=plugin",
     "lint": "ng lint",
     "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/cdk": "6.0.0-beta.4",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/flex-layout": "^5.0.0-beta.13",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/material": "6.0.0-beta.4",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/platform-server": "^5.2.5",
-    "@angular/router": "^5.2.5",
-    "@ncstate/sat-popover": "^1.0.0",
-    "@ngrx/effects": "^5.1.0",
-    "@ngrx/entity": "^5.1.0",
-    "@ngrx/router-store": "^5.0.1",
-    "@ngrx/store": "^5.1.0",
-    "@ngx-translate/core": "^9.1.1",
-    "@ngx-translate/http-loader": "^2.0.1",
-    "angular2-hotkeys": "^2.0.4",
+    "@angular/animations": "^6.0.5",
+    "@angular/cdk": "^6.2.1",
+    "@angular/common": "^6.0.5",
+    "@angular/compiler": "^6.0.5",
+    "@angular/core": "^6.0.5",
+    "@angular/flex-layout": "^6.0.0-beta.16",
+    "@angular/forms": "^6.0.5",
+    "@angular/http": "^6.0.5",
+    "@angular/material": "^6.2.1",
+    "@angular/platform-browser": "^6.0.5",
+    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/platform-server": "^6.0.5",
+    "@angular/router": "^6.0.5",
+    "@ncstate/sat-popover": "^2.1.1",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/entity": "^6.0.1",
+    "@ngrx/router-store": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "angular2-hotkeys": "^2.1.2",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
     "mobile-drag-drop": "^2.3.0-rc.0",
-    "nbt": "^0.7.0",
     "ngx-auto-unsubscribe": "^2.3.0",
-    "ngx-clipboard": "^10.0.0",
-    "ngx-contextmenu": "^4.1.2",
+    "ngx-clipboard": "^11.1.1",
+    "ngx-contextmenu": "^5.0.1",
     "ngx-drag-drop": "^1.0.3",
     "pako": "^1.0.6",
     "reselect": "^3.0.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.8",
-    "@angular/compiler-cli": "^5.2.5",
-    "@ngrx/store-devtools": "^5.1.0",
-    "@types/node": "^9.4.6",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "6.0.5",
+    "@ngrx/store-devtools": "^6.0.1",
+    "@types/node": "^9.0.0",
     "codelyzer": "^4.1.0",
     "ngrx-store-freeze": "^0.2.1",
-    "ts-node": "^4.1.0",
+    "ts-node": "^6.1.1",
     "tslint": "^5.9.1",
-    "typescript": ">=2.4.2 <2.7.0"
+    "typescript": ">=2.7.2 <2.8"
   }
 }
