--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.5",
+    "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.5",
-    "@angular/compiler": "^6.0.5",
-    "@angular/core": "^6.0.5",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
     "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.5",
-    "@angular/http": "^6.0.5",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
     "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.5",
-    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/platform-server": "^6.0.5",
-    "@angular/router": "^6.0.5",
+    "@angular/router": "^6.1.0",
     "@ncstate/sat-popover": "^2.1.1",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
@@ -32,7 +32,7 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular2-hotkeys": "^2.1.2",
-    "core-js": "^2.5.3",
+    "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "mobile-drag-drop": "^2.3.0-rc.0",
     "ngx-auto-unsubscribe": "^2.3.0",
@@ -41,21 +41,21 @@
     "ngx-drag-drop": "^1.0.3",
     "pako": "^1.0.6",
     "reselect": "^3.0.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.3.0",
     "rxjs-compat": "^6.2.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "6.0.5",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "~6.2.4",
+    "@angular/compiler-cli": "^6.1.0",
     "@ngrx/store-devtools": "^6.0.1",
     "@types/node": "^9.0.0",
-    "codelyzer": "^4.1.0",
+    "codelyzer": "^4.3.0",
     "ngrx-store-freeze": "^0.2.1",
-    "ts-node": "^6.1.1",
-    "tslint": "^5.9.1",
-    "typescript": ">=2.7.2 <2.8"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2"
   }
 }
