--- a/package.json
+++ b/package.json
@@ -11,51 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/platform-server": "^6.0.5",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^7.0.0",
+    "@angular/cdk": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/material": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/platform-server": "^7.0.0",
+    "@angular/router": "^7.0.0",
     "@ncstate/sat-popover": "^2.1.1",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/entity": "^6.0.1",
-    "@ngrx/router-store": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/entity": "^6.1.0",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "angular2-hotkeys": "^2.1.2",
-    "core-js": "^2.5.4",
+    "angular2-hotkeys": "2.1.3",
+    "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "mobile-drag-drop": "^2.3.0-rc.0",
     "ngx-auto-unsubscribe": "^2.3.0",
-    "ngx-clipboard": "^11.1.1",
-    "ngx-contextmenu": "^5.0.1",
+    "ngx-clipboard": "^11.1.9",
+    "ngx-contextmenu": "^5.0.3",
     "ngx-drag-drop": "^1.0.3",
     "pako": "^1.0.6",
-    "reselect": "^3.0.1",
-    "rxjs": "^6.3.0",
+    "reselect": "^4.0.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.2.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
-    "@angular/compiler-cli": "^6.1.0",
-    "@ngrx/store-devtools": "^6.0.1",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.1",
+    "@angular/compiler-cli": "^7.0.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "@types/node": "^9.0.0",
-    "codelyzer": "^4.3.0",
-    "ngrx-store-freeze": "^0.2.1",
-    "ts-node": "~7.0.0",
+    "codelyzer": "^4.5.0",
+    "ngrx-store-freeze": "^0.2.4",
+    "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~3.1.3"
   }
 }
