add website environment

--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,23 @@
                 }
               ]
             },
+            "website": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.website.ts"
+                }
+              ]
+            },
             "proxy": {
               "fileReplacements": [
                 {
