--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngrx/store": "^7.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@sentry/browser": "^4.5.1",
     "angular2-hotkeys": "2.1.4",
     "core-js": "^2.6.1",
     "hammerjs": "^2.0.8",
