--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json --configuration=proxy --open",
     "build": "ng build",
     "build-website": "ng build --prod --configuration=website",
-    "build-plugin": "ng build --prod --configuration=plugin --no-progress",
+    "build-plugin": "ng build --prod --configuration=plugin --no-progress --sourceMap=true",
     "lint": "ng lint",
     "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts"
   },
