--- a/package.json
+++ b/package.json
@@ -6,55 +6,53 @@
     "start": "ng serve --proxy-config proxy.conf.json --configuration=proxy --open",
     "build": "ng build",
     "build-website": "ng build --prod --configuration=website",
-    "build-plugin": "ng build --prod --configuration=plugin --no-progress --sourceMap=true",
+    "build-plugin": "ng build --prod --configuration=plugin --no-progress",
     "lint": "ng lint",
     "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.14",
-    "@angular/http": "^7.2.14",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/platform-server": "^7.2.14",
-    "@angular/router": "^7.2.14",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/platform-server": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "@ncstate/sat-popover": "^3.2.0",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/entity": "^7.4.0",
-    "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
+    "@ngrx/effects": "^8.0.0-rc.1",
+    "@ngrx/entity": "^8.0.0-rc.1",
+    "@ngrx/router-store": "^8.0.0-rc.1",
+    "@ngrx/store": "^8.0.0-rc.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@sentry/browser": "^5.1.2",
+    "@sentry/browser": "^5.4.0",
     "angular2-hotkeys": "2.1.4",
     "core-js": "^2.6.2",
     "hammerjs": "^2.0.8",
     "ngx-auto-unsubscribe": "^3.0.0",
-    "ngx-clipboard": "^12.0.0",
+    "ngx-clipboard": "^12.1.0",
     "ngx-contextmenu": "^5.2.0",
     "pako": "^1.0.10",
     "reselect": "^4.0.0",
-    "rxjs": "^6.3.3",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.28"
+    "rxjs": "^6.5.2",
+    "web-animations-js": "github:angular/web-animations-js#release_pr208",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.8",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@ngrx/store-devtools": "^7.4.0",
-    "@types/node": "^10.12.18",
-    "codelyzer": "^4.5.0",
-    "ngrx-store-freeze": "^0.2.4",
-    "ts-node": "~8.0.1",
-    "tslint": "~5.12.1",
-    "typescript": "~3.2.4"
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.1",
+    "@angular/compiler-cli": "^8.0.0",
+    "@ngrx/store-devtools": "^8.0.0-rc.1",
+    "@types/node": "^12.0.5",
+    "codelyzer": "^5.1.0",
+    "ts-node": "~8.2.0",
+    "tslint": "~5.17.0",
+    "typescript": "~3.4.5"
   }
 }
