--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@angular/platform-server": "^8.0.0",
     "@angular/router": "^8.0.0",
     "@ncstate/sat-popover": "^3.2.0",
-    "@ngrx/effects": "^8.0.0-rc.1",
-    "@ngrx/entity": "^8.0.0-rc.1",
-    "@ngrx/router-store": "^8.0.0-rc.1",
-    "@ngrx/store": "^8.0.0-rc.1",
+    "@ngrx/effects": "^8.0.0",
+    "@ngrx/entity": "^8.0.0",
+    "@ngrx/router-store": "^8.0.0",
+    "@ngrx/store": "^8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@sentry/browser": "^5.4.0",
@@ -45,11 +45,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.1",
+    "@angular-devkit/build-angular": "~0.800.2",
+    "@angular/cli": "~8.0.2",
     "@angular/compiler-cli": "^8.0.0",
-    "@ngrx/store-devtools": "^8.0.0-rc.1",
-    "@types/node": "^12.0.5",
+    "@ngrx/store-devtools": "^8.0.0",
+    "@types/node": "^12.0.7",
     "codelyzer": "^5.1.0",
     "ts-node": "~8.2.0",
     "tslint": "~5.17.0",
