replace Material icons with Font Awesome icons

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@angular/platform-browser-dynamic": "^8.1.0",
     "@angular/platform-server": "^8.1.0",
     "@angular/router": "^8.1.0",
+    "@fortawesome/angular-fontawesome": "^0.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@ncstate/sat-popover": "^4.0.0",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/entity": "^8.0.1",
