--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json --configuration=proxy --open",
     "build": "ng build",
-    "build-website": "ng build --prod --configuration=website",
-    "build-plugin": "ng build --prod --configuration=plugin --no-progress",
+    "build:website": "ng build --prod --configuration=website",
+    "build:plugin": "ng build --prod --configuration=plugin --no-progress",
     "lint": "ng lint",
     "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts"
   },
@@ -24,27 +24,25 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/platform-server": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@datorama/akita": "^4.19.4",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ncstate/sat-popover": "^4.0.0",
-    "@ngrx/effects": "^8.5.2",
-    "@ngrx/entity": "^8.5.2",
-    "@ngrx/router-store": "^8.5.2",
-    "@ngrx/store": "^8.5.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@sentry/browser": "^5.10.2",
     "angular2-hotkeys": "2.1.5",
     "core-js": "^2.6.2",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "ngx-auto-unsubscribe": "^3.0.1",
     "ngx-clipboard": "^12.3.0",
     "ngx-contextmenu": "^5.3.0",
     "pako": "^1.0.10",
-    "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
+    "subsink": "^1.0.1",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
     "zone.js": "~0.9.1"
   },
@@ -52,7 +50,8 @@
     "@angular-devkit/build-angular": "~0.803.20",
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "^8.2.14",
-    "@ngrx/store-devtools": "^8.5.2",
+    "@datorama/akita-ngdevtools": "^3.0.2",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.17",
     "codelyzer": "^5.2.0",
     "ts-node": "~8.3.0",
