--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,35 @@
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@enums/*": [
+        "src/app/enums/*"
+      ],
+      "@interfaces/*": [
+        "src/app/interfaces/*"
+      ],
+      "@services/*": [
+        "src/app/services/*"
+      ],
+      "@modules/*": [
+        "src/app/modules/*"
+      ],
+      "@components/*": [
+        "src/app/components/*"
+      ],
+      "@helpers/*": [
+        "src/app/helpers/*"
+      ],
+      "@classes/*": [
+        "src/app/classes/*"
+      ],
+      "@interceptors/*": [
+        "src/app/interceptors/*"
+      ],
+      "@environment/*": [
+        "src/environments/*"
+      ]
+    }
   }
 }
