--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.0.3",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
+    "@angular/common": "^9.0.3",
+    "@angular/compiler": "^9.0.3",
+    "@angular/core": "^9.0.3",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.14",
+    "@angular/forms": "^9.0.3",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.0.3",
+    "@angular/platform-browser-dynamic": "^9.0.3",
+    "@angular/platform-server": "^9.0.3",
+    "@angular/router": "^9.0.3",
     "@datorama/akita": "^4.19.4",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -43,19 +43,20 @@
     "pako": "^1.0.10",
     "rxjs": "^6.5.3",
     "subsink": "^1.0.1",
-    "web-animations-js": "github:angular/web-animations-js#release_pr208",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.3",
+    "@angular/cli": "~9.0.3",
+    "@angular/compiler-cli": "^9.0.3",
     "@datorama/akita-ngdevtools": "^3.0.2",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.17",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.20.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.7.5"
   }
 }
