--- a/package.json
+++ b/package.json
@@ -8,54 +8,53 @@
     "build:website": "ng build --prod --configuration=website",
     "build:plugin": "ng build --prod --configuration=plugin --no-progress",
     "lint": "ng lint",
-    "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "pre-build": "node -e \"console.log('export const APP_VERSION = \\'' + process.env.npm_package_version.substring(0,process.env.npm_package_version.lastIndexOf('.')) + '-b' + (process.env.npm_config_BUILD || '0') +'\\';')\" > src/version.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.2",
-    "@angular/cdk": "^9.1.0",
-    "@angular/common": "9.0.2",
-    "@angular/compiler": "9.0.2",
-    "@angular/core": "9.0.2",
+    "@angular/animations": "9.1.2",
+    "@angular/cdk": "^9.2.1",
+    "@angular/common": "9.1.2",
+    "@angular/compiler": "9.1.2",
+    "@angular/core": "9.1.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "9.0.2",
-    "@angular/material": "^9.1.0",
-    "@angular/platform-browser": "9.0.2",
-    "@angular/platform-browser-dynamic": "9.0.2",
-    "@angular/platform-server": "9.0.2",
-    "@angular/router": "9.0.2",
-    "@datorama/akita": "^4.19.4",
-    "@fortawesome/angular-fontawesome": "^0.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@angular/forms": "9.1.2",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "9.1.2",
+    "@angular/platform-browser-dynamic": "9.1.2",
+    "@angular/platform-server": "9.1.2",
+    "@angular/router": "9.1.2",
+    "@datorama/akita": "^4.22.2",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ncstate/sat-popover": "^4.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@sentry/browser": "^5.12.5",
-    "angular2-hotkeys": "2.1.5",
+    "@sentry/browser": "^5.15.4",
+    "angular2-hotkeys": "2.2.0",
     "core-js": "^2.6.2",
     "lodash": "^4.17.15",
     "ngx-clipboard": "^13.0.0",
-    "ngx-contextmenu": "^5.3.0",
+    "ngx-contextmenu": "^5.4.0",
     "pako": "^1.0.11",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.5",
     "subsink": "^1.0.1",
     "tslib": "^1.11.1",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cli": "~9.0.3",
-    "@angular/compiler-cli": "9.0.2",
-    "@datorama/akita-ngdevtools": "^3.0.2",
-    "@types/lodash": "^4.14.149",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "9.1.2",
+    "@datorama/akita-ngdevtools": "^4.0.0",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "ts-node": "~8.6.2",
-    "tslint": "~5.20.1",
-    "typescript": "~3.7.5"
+    "codelyzer": "^5.2.2",
+    "ts-node": "~8.8.2",
+    "tslint": "~6.1.1",
+    "typescript": "~3.8.3"
   }
 }
