--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,52 +1,14 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "module": "esnext",
-    "outDir": "./dist/out-tsc",
-    "baseUrl": "src",
-    "sourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "/",
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2016",
-      "dom"
-    ],
-    "paths": {
-      "@enums/*": [
-        "src/app/enums/*"
-      ],
-      "@interfaces/*": [
-        "src/app/interfaces/*"
-      ],
-      "@services/*": [
-        "src/app/services/*"
-      ],
-      "@modules/*": [
-        "src/app/modules/*"
-      ],
-      "@components/*": [
-        "src/app/components/*"
-      ],
-      "@helpers/*": [
-        "src/app/helpers/*"
-      ],
-      "@classes/*": [
-        "src/app/classes/*"
-      ],
-      "@interceptors/*": [
-        "src/app/interceptors/*"
-      ],
-      "@environment/*": [
-        "src/environments/*"
-      ]
+  "files": [],
+  "references": [
+    {
+      "path": "./src/tsconfig.app.json"
     }
-  }
+  ]
 }
