:wrench: add some libs to allowedCommonJsDependencies

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,13 @@
             "styles": [
               "src/resources/styles/style.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "pako",
+              "subsink",
+              "mousetrap"
+            ]
           },
           "configurations": {
             "production": {
