--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         run: echo ::set-env name=BUILD_NUMBER::$(($github.run_number+134))
 
       - name: Apply build number
-        run: yarn run pre-build --BUILD=${{ BUILD_NUMBER }}
+        run: yarn run pre-build --BUILD=${{ env.BUILD_NUMBER }}
 
       - name: Build app
         run: yarn run build:plugin
@@ -49,7 +49,7 @@ jobs:
         with:
           environment: 'production'
           sourcemaps: './dist'
-          version: 'PLUGIN-3.0-b${{ BUILD_NUMBER }}'
+          version: 'PLUGIN-3.0-b${{ env.BUILD_NUMBER }}'
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
